# lawcalc-kr

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.future  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
Casks/: lawcalc-korea.rb
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  env.d.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: clipboard.rs  csv.rs  lcalc.rs  mod.rs  pdf.rs  result_view.rs
apps/desktop/src/components/: UpdateDialog.tsx  inheritance-heirs.tsx  other-damages-form.tsx
apps/desktop/src/lib/: case-file.ts  (+8 more)
data/delivery/: v1.json
data/hoffman/: v1.json
data/interest-limits/: v1.json  v1.schema.json
data/labor-rates/: v1.json
data/lawyer-fee/: v1.json  v2.json
data/legal-rates/: v1.json  v1.schema.json
data/leibniz/: v1.json
data/life-expectancy/: v1.json
data/stamp-duty/: v1.json
docs/: ARCHITECTURE.md  DEV_WORKFLOW.md  DISCLAIMER.md  INTEREST_FORMULAS.md  LEGAL_REFERENCES.md  RELEASE.md  TESTING.md  UPDATER.md  USER_TEST_PLAN.md  project-design.md  source-materials.md
docs/history/: in-progress.md
docs/plans/: agpl-3.0-license-rework.md  homebrew-tap-plan.md  inapp-updater-plan.md  v0.1.x-improvement-backlog.md
scripts/: build-icons.mjs  bump-version.mjs  capture-screens.mjs  check-hardcoded-version.mjs  update-homebrew-tap.mjs
(+31 files in other folders)
