[package]
name = "lawcalc-kr-desktop"
version = "0.1.0"
description = "LawCalc Korea desktop shell (Tauri 2.x)"
authors = ["LawCalc Korea contributors"]
license = "BUSL-1.1"
repository = "https://github.com/kyungseopk1m/lawcalc-kr"
edition = "2021"
rust-version = "1.92"

[lib]
name = "lawcalc_kr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
