[package]
name = "lawcalc-kr-desktop"
version = "0.2.4"
description = "LawCalc Korea desktop shell (Tauri 2.x)"
authors = ["LawCalc Korea contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/kyungseopk1m/lawcalc-kr"
edition = "2021"
rust-version = "1.92"

[lib]
name = "lawcalc_kr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
printpdf = { version = "0.7", features = ["font_subsetting"] }
csv = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
